--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-portfolio",
+  "homepage": "https://sirajchokshi.github.io/new-portfolio/",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://sirajchokshi.github.io/new-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,7 +11,8 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-scroll": "^1.7.15"
   },
   "scripts": {
     "predeploy": "npm run build",
