--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://new-portfolio.sirajchokshi.com",
+  "homepage": "https://sirajchokshi.github.io/new-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
