--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "http://sirajchokshi.github.io/",
+  "homepage": "http://sirajchokshi.github.io/build-test/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
