--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "css-vars-ponyfill-react": "^1.1.1",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-manifest": "^2.4.0",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.3.1",
