--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby"
