--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-grid-system": "^6.3.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
-    "react-scroll": "^1.7.16",
-    "tailwindcss": "^1.4.6"
+    "react-scroll": "^1.7.16"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
