--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-postcss": "^2.3.1",
     "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-plugin-sass": "^5.1.1",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-source-filesystem": "^2.3.0",
@@ -29,7 +30,8 @@
     "react-grid-system": "^6.3.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
