--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sass": "^5.1.1",
     "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-remark-copy-linked-files": "^5.1.0",
+    "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^5.1.3",
